<resources>
    <string name="app_name">My Budget</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>

    <string name="field_email_empty">Email cannot be empty</string>
    <string name="field_password_empty">Password cannot be empty</string>
    <string name="field_email_invalid">Email is invalid</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_income">Income</string>
    <string name="title_statistics">Charts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="how_much_money">How much money you have now?</string>
    <string name="welcome">Welcome!</string>
    <string name="select_currency">Select currency</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
</resources>
